# omnimalloc

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml  checks.yml
examples/: 01_basic.py  02_plotting.py  03_allocators.py  04_sources.py  05_benchmark.py
notebooks/: custom_allocator.ipynb  custom_source.ipynb  extensive_benchmark.ipynb
research/: bench.py  candidates.py  fast-allocators.md
scripts/: benchmark_allocation.py  benchmark_pressure.py  benchmark_queries.py  generate_readme_assets.py  stress_omni.py
src/cpp/: bindings.cpp
src/cpp/allocators/: best_fit.cpp  best_fit.hpp  defaults.hpp  first_fit.cpp  first_fit.hpp  greedy.cpp  greedy.hpp  greedy_base.cpp  greedy_base.hpp  local_search.cpp  local_search.hpp  omni.cpp  omni.hpp  simulated_annealing.cpp  simulated_annealing.hpp  supermalloc.cpp  supermalloc.hpp  sweep.cpp  sweep.hpp  tabu_search.cpp  tabu_search.hpp  telamalloc.cpp  telamalloc.hpp
src/cpp/analysis/: antichain.cpp  antichain.hpp  clock.hpp  closure.cpp  closure.hpp  conflicts.cpp  conflicts.hpp  linearize.cpp  linearize.hpp  placement.cpp  placement.hpp
src/cpp/common/: deadline.hpp  parallel.hpp
src/cpp/primitives/: allocation.cpp  allocation.hpp  allocation_kind.hpp  antichain.cpp  antichain.hpp  clock_rows.hpp  closure.cpp  closure.hpp  id_type.hpp  linearize.cpp  linearize.hpp  placement.cpp  placement.hpp
src/python/omnimalloc/: __init__.py  _allocate.py  _cpp.pyi  allocate.py  (+5 more)
tests/: conftest.py
tests/integration/: test_allocators_on_sources.py  test_examples.py  test_omni_torture.py  test_supermalloc.py
tests/unit/: test_allocate.py  test_dump.py  test_io.py  test_linearize.py  test_validate.py  test_vector_conflict_properties.py  test_visualize.py
training/: README.md  eval_neural.py  train_neural.py
(+130 files in other folders)
